src/test/ui/parser/recover-enum.stderr
error: missing comma
  --> $DIR/recover-enum.rs:3:13
   |
LL |         Very
   |             ^ If I were you, I would simply missing comma

error: missing comma
  --> $DIR/recover-enum.rs:5:19
   |
LL |         Bad(usize)
   |                   ^ If I were you, I would simply missing comma

error: missing comma
  --> $DIR/recover-enum.rs:7:27
   |
LL |         Stuff { a: usize }
   |                           ^ If I were you, I would simply missing comma

error: aborting due to 3 previous errors

